tests/ui/defined_twice.stderr
Error [E0105]: `greet` is defined twice
  --> tests/ui/defined_twice.lex:5:4
    |
  5 | fn greet() {
    |    ^^^^^
 Why: every function needs a unique name so calls aren't ambiguous
 Fix: rename or remove one of the definitions
