tests/ui/defined_twice.lex
fn greet() {
    print("hi");
}

fn greet() {
    print("hello");
}

fn main() {
    greet();
}
